DSL2 transition; Fix: Issue with multiple samples

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
             NXF_EDGE: '1'
         test:
           - 'default'
+          - 'defaultmultiplesamples'
           - 'annotation'
           - 'removeduplicates'
     steps:
