--- a/conf/modules.config
+++ b/conf/modules.config
@@ -21,6 +21,14 @@ process {
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
 
+    withName: 'NFCORE_RNAVAR:RNAVAR:INPUT_CHECK:SAMPLESHEET_CHECK' {
+        publishDir = [
+            path: { "${params.outdir}/pipeline_info" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
@@ -30,9 +38,10 @@ process {
     }
 }
 
-// PREPARE FASTQ AND GENOME
+// PREPARE GENOME
 
 process {
+
     withName: CAT_FASTQ {
         publishDir = [
             path: { "${params.outdir}/fastq" },
@@ -41,7 +50,25 @@ process {
             enabled: params.save_merged_fastq
         ]
     }
+
+    withName: 'GUNZIP_.*' {
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
+    withName: 'UNTAR_.*' {
+        ext.args2 = '--no-same-owner'
+    }
+
     withName: STAR_GENOMEGENERATE {
+        ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
+    }
+
+    withName: 'UNTAR_.*|STAR_GENOMEGENERATE' {
         publishDir = [
             path: { "${params.outdir}/genome/index" },
             mode: params.publish_dir_mode,
@@ -50,12 +77,62 @@ process {
         ]
     }
 
+    withName: GTF2BED {
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
+    withName: GET_CHROM_SIZES {
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
+    withName: GATK4_CREATESEQUENCEDICTIONARY {
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
+    }
+}
+
+// READ QC AND QC REPORT
+
+process {
+
+    withName: MULTIQC {
+        ext.args   = params.multiqc_title ? "--title \"$params.multiqc_title\"" : ''
+        publishDir = [
+            path: { "${params.outdir}/reports"},
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: FASTQC {
+        ext.args    = '--quiet'
+        publishDir  = [
+            path: { "${params.outdir}/reports/fastqc/${meta.id}" },
+            enabled: false
+        ]
+    }
 }
 
 // ALIGNMENT
 process {
+
     // ALIGN_STAR
-    withName: '.*:ALIGN_STAR:STAR_ALIGN' {
+
+    withName: STAR_ALIGN {
         ext.args   = [
             '--outSAMtype BAM Unsorted',
             '--readFilesCommand zcat',
@@ -89,7 +166,7 @@ process {
 
 process {
 
-    withName: 'NFCORE_RNAVAR:RNAVAR:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
+    withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
         ext.suffix = '.sorted'
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
@@ -98,7 +175,8 @@ process {
             enabled: params.save_align_intermeds
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
+
+    withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args   = params.bam_csi_index ? '-c' : ''
         ext.suffix = '.sorted'
         publishDir = [
@@ -108,64 +186,86 @@ process {
             enabled: params.save_align_intermeds
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_INTERVALLISTTOOLS' {
+
+    withName: GATK4_BEDTOINTERVALLIST {
+        publishDir  = [ enabled: false ]
+    }
+
+    withName: GATK4_INTERVALLISTTOOLS {
         ext.args   = [
-            '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW'
-            '--UNIQUE true'
-            '--SORT true'
+            '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW',
+            '--UNIQUE true',
+            '--SORT true',
             params.scatter_count ? "--SCATTER_COUNT $params.scatter_count" : ''
         ].join(' ').trim()
+        publishDir  = [ enabled: false ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:MARKDUPLICATES:PICARD_MARKDUPLICATES' {
+
+    withName: '.*:MARKDUPLICATES:PICARD_MARKDUPLICATES' {
         ext.args   = [
             'ASSUME_SORTED=true',
             'VALIDATION_STRINGENCY=LENIENT',
             params.remove_duplicates ? 'REMOVE_DUPLICATES=true' : ''
         ].join(' ').trim()
-        ext.suffix  = '.markdup.sorted'
-        publish_dir = [
+        ext.prefix = {"${meta.id}.markdup.sorted"}
+        publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
-            pattern: "*.bam"
+            enabled: true,
+            pattern: "*.{bam}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:MARKDUPLICATES:SAMTOOLS_INDEX' {
+
+    withName: '.*:MARKDUPLICATES:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.suffix  = '.markdup.sorted'
-        publish_dir = [
+        ext.prefix = {"${meta.id}.markdup.sorted"}
+        publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
+            enabled: true,
             pattern: "*.{bai,csi}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_BASERECALIBRATOR' {
-        ext.args    =  '--use-original-qualities'
+
+    withName: '.*:SPLITNCIGAR:.*' {
+        publishDir  = [ enabled: false ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:RECALIBRATE:APPLYBQSR' {
+
+    withName: GATK4_BASERECALIBRATOR {
+        ext.args    =  '--use-original-qualities'
+        publishDir  = [ enabled: false ]
+    }
+
+    withName: '.*:RECALIBRATE:APPLYBQSR' {
         ext.args    = [
             '--use-original-qualities',
             '--add-output-sam-program-record'
         ].join(' ').trim()
-        ext.suffix  = '.recal'
-        publish_dir = [
+        ext.prefix = {"${meta.id}.recal"}
+        publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
+            enabled: true,
             pattern: "*.{bam}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:RECALIBRATE:SAMTOOLS_INDEX' {
+
+    withName: '.*:RECALIBRATE:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.suffix  = '.recal'
-        publish_dir = [
+        ext.prefix = {"${meta.id}.recal"}
+        publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
+            enabled: true,
             pattern: "*.{bai,csi}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:RECALIBRATE:SAMTOOLS_STATS' {
-        publish_dir = [
+
+    withName: 'SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
+        publishDir  = [
             path: { "${params.outdir}/reports/samtools_stats/${meta.id}" },
             mode: params.publish_dir_mode,
+            enabled: true,
             pattern: "*.{stats,flagstat}"
         ]
     }
@@ -174,37 +274,42 @@ process {
 // VARIANT CALLING AND FILTERING
 
 process {
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_HAPLOTYPECALLER' {
+
+    withName: GATK4_HAPLOTYPECALLER {
         ext.args    = [
-            '-dont-use-soft-clipped-bases'
+            '-dont-use-soft-clipped-bases',
             params.stand_call_conf ? "--standard-min-confidence-threshold-for-calling $params.stand_call_conf" : ''
         ].join(' ').trim()
+        publishDir  = [ enabled: false ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_MERGEVCFS' {
-        ext.suffix  = '.haplotypecaller'
-        publish_dir = [
+
+    withName: GATK4_MERGEVCFS {
+        ext.prefix = {"${meta.id}.haplotypecaller"}
+        publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
             pattern: "*.{vcf.gz}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_INDEXFEATUREFILE' {
-        ext.suffix  = '.haplotypecaller'
-        publish_dir = [
+
+    withName: GATK4_INDEXFEATUREFILE {
+        ext.prefix = {"${meta.id}.haplotypecaller"}
+        publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
             pattern: "*.{vcf.gz.tbi}"
         ]
     }
-    withName: 'NFCORE_RNAVAR:RNAVAR:GATK4_VARIANTFILTRATION' {
-        ext.suffix  = '.filtered'
+
+    withName: GATK4_VARIANTFILTRATION {
+        ext.prefix = {"${meta.id}.haplotypecaller.filtered"}
         ext.args    = [
-            params.window ? "--window $params.window" : ''
-            params.cluster ? "--cluster $params.cluster" : ''
-            params.fs_filter ? "--filter-name \"FS\" --filter \"FS > $params.fs_filter\" " : ''
-            params.qd_filter ? "--filter-name \"QD\" --filter \"QD < $params.qd_filter\" " : ''
+            params.window ? "--window $params.window" : '',
+            params.cluster ? "--cluster $params.cluster" : '',
+            params.fs_filter ? "--filter-name \"FS\" --filter \"FS > $params.fs_filter\" " : '',
+            params.qd_filter ? "--filter-name \"QD\" --filter \"QD < $params.qd_filter\" " : '',
         ].join(' ').trim()
-        publish_dir = [
+        publishDir  = [
             path: { "${params.outdir}/variant_calling/${meta.id}" },
             mode: params.publish_dir_mode,
             pattern: "*.{vcf.gz,vcf.gz.tbi}"
@@ -215,26 +320,29 @@ process {
 // VARIANT ANNOTATION
 
 process {
+
     withName: 'ENSEMBLVEP' {
         ext.args    = '--everything --filter_common --per_gene --total_length --offline'
         container   = { "nfcore/vep:104.3.${params.genome}" }
         publishDir  = [ enabled: false ]
     }
+
     withName: 'SNPEFF' {
         ext.args    = '-nodownload -canon -v'
         container   = { "nfcore/snpeff:5.0.${params.genome}" }
         publishDir  = [ enabled: false ]
     }
-    withName: 'ANNOTATION_BGZIPTABIX' {
-        publishDir       = [
+
+    withName: 'TABIX_BGZIPTABIX' {
+        publishDir  = [
             path: { "${params.outdir}/variant_annotation/${meta.id}" },
             enabled: true,
-            pattern: "*{gz,gz.tbi}"
+            pattern: "*.{gz,gz.tbi}"
         ]
     }
 }
 
-if(!params.skip_variantannotation && ('merge' in tools || 'snpeff' in tools)) {
+if( (params.annotate_tools) && (params.annotate_tools.contains('snpeff') || params.annotate_tools.contains('merge')) ) {
     process {
         withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:SNPEFF_ANNOTATE:TABIX_BGZIPTABIX' {
             ext.prefix = {"${meta.id}_snpEff.ann.vcf"}
@@ -242,7 +350,7 @@ if(!params.skip_variantannotation && ('merge' in tools || 'snpeff' in tools)) {
     }
 }
 
-if(!params.skip_variantannotation && ('vep' in tools)) {
+if( (params.annotate_tools) && (params.annotate_tools.contains('vep')) ) {
     process {
         withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:ENSEMBLVEP_ANNOTATE:TABIX_BGZIPTABIX' {
             ext.prefix = {"${meta.id}_VEP.ann.vcf"}
@@ -250,31 +358,10 @@ if(!params.skip_variantannotation && ('vep' in tools)) {
     }
 }
 
-if(!params.skip_variantannotation && ('merge' in tools) {
+if( (params.annotate_tools) && (params.annotate_tools.contains('merge')) ) {
     process {
         withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:MERGE_ANNOTATE:TABIX_BGZIPTABIX' {
             ext.prefix = {"${meta.id}_snpEff_VEP.ann.vcf"}
         }
-    }
-
-}
-
-// QC
-
-process {
-    withName: MULTIQC {
-        ext.args   = params.multiqc_title ? "--title \"$params.multiqc_title\"" : ''
-        publishDir = [
-            path: { "${params.outdir}/reports"},
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
-    }
-    withName: FASTQC {
-        ext.args    = '--quiet'
-        publishDir  = [
-            path: { "${params.outdir}/reports/fastqc/${meta.id}" }
-            enabled: false
-        ]
     }
 }
