--- a/tests/test_default.yml
+++ b/tests/test_default.yml
@@ -9,5 +9,5 @@
     - path: results/preprocessing/GM12878/GM12878.recal.bam.bai
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.vcf.gz
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.vcf.gz.tbi
-    - path: results/variant_filtering/GM12878/GM12878.filtered.vcf.gz
-    - path: results/variant_filtering/GM12878/GM12878.filtered.vcf.gz.tbi
+    - path: results/variant_calling/GM12878/GM12878.haplotypecaller.filtered.vcf.gz
+    - path: results/variant_calling/GM12878/GM12878.haplotypecaller.filtered.vcf.gz.tbi
