--- a/tests/test_default.yml
+++ b/tests/test_default.yml
@@ -11,3 +11,9 @@
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.vcf.gz.tbi
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.filtered.vcf.gz
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.filtered.vcf.gz.tbi
+    - path: results/preprocessing/TEST123/TEST123.recal.bam
+    - path: results/preprocessing/TEST123/TEST123.recal.bam.bai
+    - path: results/variant_calling/TEST123/TEST123.haplotypecaller.vcf.gz
+    - path: results/variant_calling/TEST123/TEST123.haplotypecaller.vcf.gz.tbi
+    - path: results/variant_calling/TEST123/TEST123.haplotypecaller.filtered.vcf.gz
+    - path: results/variant_calling/TEST123/TEST123.haplotypecaller.filtered.vcf.gz.tbi
