--- a/conf/test.config
+++ b/conf/test.config
@@ -23,10 +23,8 @@ params {
     input = "${baseDir}/tests/csv/samplesheet_test.csv"
 
     // Genome references
-    genome              = 'WBcel235'
+    //genome              = 'WBcel235'
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
-    fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
-    dict                = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
     gtf                 = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.gtf'
     gene_bed            = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.bed'
 
@@ -37,7 +35,8 @@ params {
     known_indels_tbi    = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz.tbi'
 
     // STAR index (optional)
-    star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
+    //star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
+    star_index          = '/home/praveen/star_index_ver_test/star_invalid/'
 
     // Annotation
     snpeff_db           = 'WBcel235.99'
