--- a/conf/modules.config
+++ b/conf/modules.config
@@ -86,15 +86,6 @@ process {
         ]
     }
 
-    withName: GET_CHROM_SIZES {
-        publishDir = [
-            path: { "${params.outdir}/genome" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
-            enabled: params.save_reference
-        ]
-    }
-
     withName: GATK4_CREATESEQUENCEDICTIONARY {
         publishDir = [
             path: { "${params.outdir}/genome" },
@@ -150,7 +141,7 @@ process {
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
                 mode: params.publish_dir_mode,
                 pattern: '*.bam',
-                enabled: params.save_align_intermeds
+                enabled: false
             ],
             [
                 path: { "${params.outdir}/preprocessing/${meta.id}/unmapped" },
@@ -167,7 +158,7 @@ process {
 process {
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_SORT' {
-        ext.suffix = '.sorted'
+        ext.prefix = {"${meta.id}.aligned"}
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -178,7 +169,7 @@ process {
 
     withName: '.*:ALIGN_STAR:BAM_SORT_SAMTOOLS:SAMTOOLS_INDEX' {
         ext.args   = params.bam_csi_index ? '-c' : ''
-        ext.suffix = '.sorted'
+        ext.prefix = {"${meta.id}.aligned"}
         publishDir = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
@@ -337,6 +328,7 @@ process {
         publishDir  = [
             path: { "${params.outdir}/variant_annotation/${meta.id}" },
             enabled: true,
+            mode: params.publish_dir_mode,
             pattern: "*.{gz,gz.tbi}"
         ]
     }
