--- a/conf/modules.config
+++ b/conf/modules.config
@@ -86,6 +86,10 @@ process {
         ]
     }
 
+    withName: SAMTOOLS_FAIDX {
+        publishDir = [ enabled: false ]
+    }
+
     withName: GET_CHROM_SIZES {
         publishDir = [
             path: { "${params.outdir}/genome" },
