update: modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -87,7 +87,12 @@ process {
     }
 
     withName: SAMTOOLS_FAIDX {
-        publishDir = [ enabled: false ]
+        publishDir = [
+            path: { "${params.outdir}/genome" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
+            enabled: params.save_reference
+        ]
     }
 
     withName: GET_CHROM_SIZES {
