--- a/conf/test.config
+++ b/conf/test.config
@@ -35,8 +35,7 @@ params {
     known_indels_tbi    = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz.tbi'
 
     // STAR index (optional)
-    //star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
-    star_index          = '/home/praveen/star_index_ver_test/star_invalid/'
+    star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
 
     // Annotation
     snpeff_db           = 'WBcel235.99'
