update: test.config

--- a/conf/test.config
+++ b/conf/test.config
@@ -23,7 +23,7 @@ params {
     input = "${baseDir}/tests/csv/samplesheet_test.csv"
 
     // Genome references
-    //genome              = 'WBcel235'
+    genome              = 'WBcel235'
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
     //fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
     dict                = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
