--- a/conf/modules.config
+++ b/conf/modules.config
@@ -231,43 +231,50 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: GATK4_BASERECALIBRATOR {
-        ext.args    =  '--use-original-qualities'
-        publishDir  = [ enabled: false ]
-    }
-
-    withName: '.*:RECALIBRATE:APPLYBQSR' {
-        ext.args    = [
-            '--use-original-qualities',
-            '--add-output-sam-program-record'
-        ].join(' ').trim()
-        ext.prefix = {"${meta.id}.recal"}
-        publishDir  = [
-            path: { "${params.outdir}/preprocessing/${meta.id}" },
-            mode: params.publish_dir_mode,
-            enabled: true,
-            pattern: "*.{bam}"
-        ]
-    }
-
-    withName: '.*:RECALIBRATE:SAMTOOLS_INDEX' {
-        ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.prefix = {"${meta.id}.recal"}
-        publishDir  = [
-            path: { "${params.outdir}/preprocessing/${meta.id}" },
-            mode: params.publish_dir_mode,
-            enabled: true,
-            pattern: "*.{bai,csi}"
-        ]
-    }
-
     withName: 'SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
-        publishDir  = [
-            path: { "${params.outdir}/reports/samtools_stats/${meta.id}" },
-            mode: params.publish_dir_mode,
-            enabled: true,
-            pattern: "*.{stats,flagstat}"
-        ]
+            publishDir  = [
+                path: { "${params.outdir}/reports/samtools_stats/${meta.id}" },
+                mode: params.publish_dir_mode,
+                enabled: true,
+                pattern: "*.{stats,flagstat}"
+            ]
+    }
+
+}
+
+// BASE RECALIBRATION PROCESS
+if(!params.skip_baserecalibration) {
+    process {
+
+        withName: GATK4_BASERECALIBRATOR {
+            ext.args    =  '--use-original-qualities'
+            publishDir  = [ enabled: false ]
+        }
+
+        withName: '.*:RECALIBRATE:APPLYBQSR' {
+            ext.args    = [
+                '--use-original-qualities',
+                '--add-output-sam-program-record'
+            ].join(' ').trim()
+            ext.prefix = {"${meta.id}.recal"}
+            publishDir  = [
+                path: { "${params.outdir}/preprocessing/${meta.id}" },
+                mode: params.publish_dir_mode,
+                enabled: true,
+                pattern: "*.{bam}"
+            ]
+        }
+
+        withName: '.*:RECALIBRATE:SAMTOOLS_INDEX' {
+            ext.args    = params.bam_csi_index ? '-c' : ''
+            ext.prefix = {"${meta.id}.recal"}
+            publishDir  = [
+                path: { "${params.outdir}/preprocessing/${meta.id}" },
+                mode: params.publish_dir_mode,
+                enabled: true,
+                pattern: "*.{bai,csi}"
+            ]
+        }
     }
 }
 
