--- a/nextflow.config
+++ b/nextflow.config
@@ -53,6 +53,7 @@ params {
     vep_cache                  = null // No directory for VEP cache
 
     // Skip steps
+    skip_baserecalibration     = false
     skip_intervallisttools     = false
     skip_variantfiltration     = false
     skip_variantannotation     = false
