--- a/conf/modules.config
+++ b/conf/modules.config
@@ -77,6 +77,16 @@ process {
         ]
     }
 
+    withName: GFFREAD {
+        ext.args    = '--keep-exon-attrs -F -T'
+        publishDir  = [
+            path: { "${params.outdir}/genome" },
+            mode: 'copy',
+            saveAs: { filename -> filename.equals('versions.yml') ?null : filename },
+            enabled: params.save_reference
+        ]
+    }
+
     withName: GTF2BED {
         publishDir = [
             path: { "${params.outdir}/genome" },
