grep feature name for BED interval list

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,7 +38,8 @@ params {
     remove_duplicates          = false
 
     // Variant calling
-    no_intervals               = false
+    no_intervals                        = false
+    interval_list_featureType           = null                  //  Do not subset for any feature type to create BED file
 
     // Variant annotation
     annotate_tools             = null // List of annotation tools to run - snpeff or vep or merge
