--- a/modules/local/gatk4/splitncigarreads/meta.yml
+++ b/modules/local/gatk4/splitncigarreads/meta.yml
@@ -12,7 +12,7 @@ tools:
       homepage: https://gatk.broadinstitute.org/hc/en-us
       documentation: https://gatk.broadinstitute.org/hc/en-us/categories/360002369672s
       doi: 10.1158/1538-7445.AM2017-3590
-      licence: ['Apache-2.0']
+      licence: ["Apache-2.0"]
 input:
   - meta:
       type: map
@@ -23,6 +23,10 @@ input:
       type: list
       description: BAM/SAM/CRAM file containing reads
       pattern: "*.{bam,sam,cram}"
+  - interval:
+      type: file
+      description: Interval file
+      pattern: "*.interval"
   - fasta:
       type: file
       description: The reference fasta file
