--- a/modules/nf-core/modules/gatk4/haplotypecaller/meta.yml
+++ b/modules/nf-core/modules/gatk4/haplotypecaller/meta.yml
@@ -7,12 +7,13 @@ keywords:
 tools:
   - gatk4:
     description: |
-        Developed in the Data Sciences Platform at the Broad Institute, the toolkit offers a wide variety of tools
-        with a primary focus on variant discovery and genotyping. Its powerful processing engine
-        and high-performance computing features make it capable of taking on projects of any size.
+      Developed in the Data Sciences Platform at the Broad Institute, the toolkit offers a wide variety of tools
+      with a primary focus on variant discovery and genotyping. Its powerful processing engine
+      and high-performance computing features make it capable of taking on projects of any size.
     homepage: https://gatk.broadinstitute.org/hc/en-us
     documentation: https://gatk.broadinstitute.org/hc/en-us/categories/360002369672s
     doi: 10.1158/1538-7445.AM2017-3590
+    licence: ["Apache-2.0"]
 
 input:
   - meta:
@@ -20,14 +21,17 @@ input:
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - bam:
+  - input:
       type: file
-      description: BAM file
-      pattern: "*.bam"
-  - bai:
+      description: BAM/CRAM file from alignment
+      pattern: "*.{bam,cram}"
+  - input_index:
       type: file
-      description: Index of BAM file
-      pattern: "*.bam.bai"
+      description: BAI/CRAI file from alignment
+      pattern: "*.{bai,crai}"
+  - intervals:
+      type: file
+      description: Bed file with the genomic regions included in the library (optional)
   - fasta:
       type: file
       description: The reference fasta file
@@ -40,16 +44,23 @@ input:
       type: file
       description: GATK sequence dictionary
       pattern: "*.dict"
+  - dbsnp:
+      type: file
+      description: VCF file containing known sites (optional)
+  - dbsnp_tbi:
+      type: file
+      description: VCF index of dbsnp (optional)
+
 output:
   - meta:
       type: map
       description: |
         Groovy Map containing sample information
         e.g. [ id:'test', single_end:false ]
-  - version:
+  - versions:
       type: file
-      description: File containing software version
-      pattern: "*.{version.txt}"
+      description: File containing software versions
+      pattern: "versions.yml"
   - vcf:
       type: file
       description: Compressed VCF file
@@ -61,3 +72,4 @@ output:
 
 authors:
   - "@suzannejin"
+  - "@FriederikeHanssen"
