--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,4 +1,6 @@
 lint:
   files_unchanged:
+    - .github/workflows/branch.yml
     - .github/workflows/linting.yml
+    - .github/workflows/linting_comment.yml
 repository_type: pipeline
