--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -11,10 +11,9 @@ jobs:
     steps:
       # PRs to the nf-core repo master branch are only ok if coming from the nf-core repo `dev` or any `patch` branches
       - name: Check PRs
-        if: github.repository == 'nf-core/rnavar'
+        if: github.repository == 'nf-core/test'
         run: |
-          { [[ ${{github.event.pull_request.head.repo.full_name }} == nf-core/rnavar ]] && [[ $GITHUB_HEAD_REF = "dev" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]]
-
+          "{ [[ ${{github.event.pull_request.head.repo.full_name }} == nf-core/test ]] && [[ $GITHUB_HEAD_REF = "dev" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]]"
 
       # If the above check failed, post a comment on the PR explaining the failure
       # NOTE - this doesn't currently work if the PR is coming from a fork, due to limitations in GitHub actions secrets
@@ -43,3 +42,4 @@ jobs:
             Thanks again for your contribution!
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           allow-repeats: false
+#
