Add: Limit parameters for STAR to manage memory failures; BAM in Coord sorted

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,9 @@ params {
     aligner                    = 'star' // Only STAR is currently supported.
     star_twopass               = true
     star_ignore_sjdbgtf        = false // Ignore GTF file while creating index or alignment by STAR
+    star_limitBAMsortRAM       = 0
+    star_outBAMsortingBinsN    = 50
+    star_limitOutSJcollapsed   = 1000000
     seq_center                 = null
     seq_platform               = 'illumina' // Required for preparing for BAM headers for GATK to work
     bam_csi_index              = false
