--- a/conf/modules.config
+++ b/conf/modules.config
@@ -141,11 +141,14 @@ process {
 
     withName: STAR_ALIGN {
         ext.args   = [
-            '--outSAMtype BAM Unsorted',
+            '--outSAMtype BAM SortedByCoordinate',
             '--readFilesCommand zcat',
             params.save_unaligned ? '--outReadsUnmapped Fastx' : '',
             params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : '',
-            params.star_twopass ? '--twopassMode Basic' : ''
+            params.star_twopass ? '--twopassMode Basic' : '',
+            params.star_limitBAMsortRAM > 0 ? "--limitBAMsortRAM ${params.star_limitBAMsortRAM}" : "",
+            params.star_outBAMsortingBinsN > 0 ? "--outBAMsortingBinsN ${params.star_outBAMsortingBinsN}" : "",
+            params.star_limitOutSJcollapsed > 0 ? "--limitOutSJcollapsed ${params.star_limitOutSJcollapsed}" : ""
         ].join(' ').trim()
         publishDir = [
             [
