--- a/conf/modules.config
+++ b/conf/modules.config
@@ -340,13 +340,17 @@ process {
 
     withName: 'ENSEMBLVEP' {
         ext.args    = '--everything --filter_common --per_gene --total_length --offline'
-        container   = { params.genome ? "nfcore/vep:104.3.${params.genome}" : "nfcore/vep:104.3.${params.vep_genome}" }
+        if(!params.vep_cache){
+            container   = { params.genome ? "nfcore/vep:104.3.${params.genome}" : "nfcore/vep:104.3.${params.vep_genome}" }
+        }
         publishDir  = [ enabled: false ]
     }
 
     withName: 'SNPEFF' {
         ext.args    = '-nodownload -canon -v'
-        container   = { params.genome ? "nfcore/snpeff:5.0.${params.genome}" : "nfcore/snpeff:5.0.${params.snpeff_db.split('\\.')[0]}" }
+        if(!params.snpeff_cache){
+            container   = { params.genome ? "nfcore/snpeff:5.0.${params.genome}" : "nfcore/snpeff:5.0.${params.snpeff_db.split('\\.')[0]}" }
+        }
         publishDir  = [ enabled: false ]
     }
 
