Add: missing paramters in config; parameter validation in WorkflowRnavar.groovy

--- a/nextflow.config
+++ b/nextflow.config
@@ -53,7 +53,10 @@ params {
     cadd_wg_snvs_tbi           = null // No CADD SNVs index
     genesplicer                = null // genesplicer disabled within VEP
     snpeff_cache               = null // No directory for snpEff cache
+    snpeff_db                  = null // No default db for snpeff
     vep_cache                  = null // No directory for VEP cache
+    vep_genome                 = null // No default genome for VEP
+    vep_cache_version          = null // No default cache version for VEP
 
     // Skip steps
     skip_baserecalibration     = false
