--- a/modules/nf-core/modules/gatk4/splitncigarreads/meta.yml
+++ b/modules/nf-core/modules/gatk4/splitncigarreads/meta.yml
@@ -24,12 +24,12 @@ input:
       description: BAM/SAM/CRAM file containing reads
       pattern: "*.{bam,sam,cram}"
   - bai:
+      type: list
+      description: BAI/SAI/CRAI index file (optional)
+      pattern: "*.{bai,sai,crai}"
+  - intervals:
       type: file
-      description: BAI/CRAI file from alignment
-      pattern: "*.{bai,crai}"
-  - interval:
-      type: file
-      description: Bed file with the genomic regions included in the library
+      description: Bed file with the genomic regions included in the library (optional)
   - fasta:
       type: file
       description: The reference fasta file
