Used GATK4/markduplicates command instead of Picard/Markduplicate. Just to standardize.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -211,11 +211,11 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: '.*:MARKDUPLICATES:PICARD_MARKDUPLICATES' {
+    withName: '.*:MARKDUPLICATES:GATK4_MARKDUPLICATES' {
         ext.args   = [
-            'ASSUME_SORTED=true',
-            'VALIDATION_STRINGENCY=LENIENT',
-            params.remove_duplicates ? 'REMOVE_DUPLICATES=true' : ''
+            '--ASSUME_SORTED true',
+            '--VALIDATION_STRINGENCY LENIENT',
+            params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
         ].join(' ').trim()
         ext.prefix = {"${meta.id}.markdup.sorted"}
         publishDir  = [
