Simplified splitNCigar subworkflow; Fix: bam_csi_index; added test for bam_csi_index

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           - "annotation"
           - "removeduplicates"
           - "skipbasecalib"
+          - "bamcsiindex"
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
