--- a/conf/modules.config
+++ b/conf/modules.config
@@ -237,20 +237,16 @@ process {
         ]
     }
 
-    withName: '.*:SPLITNCIGAR:GATK4_SPLITNCIGAR:GATK4_SPLITNCIGARREADS' {
+    withName: '.*:SPLITNCIGAR:GATK4_SPLITNCIGARREADS' {
         ext.args    =  '--create-output-bam-index false'
     }
 
-    withName: '.*:SPLITNCIGAR:GATK4_SPLITNCIGAR:SAMTOOLS_INDEX' {
+    withName: '.*:SPLITNCIGAR:SAMTOOLS_INDEX' {
         ext.args    =  params.bam_csi_index ? '-c' : ''
     }
 
     withName: '.*:SPLITNCIGAR:.*' {
         publishDir  = [ enabled: false ]
-    }
-
-    withName: '.*:SPLITNCIGAR:SAMTOOLS_INDEX' {
-        ext.args    =  params.bam_csi_index ? '-c' : ''
     }
 
     withName: 'SAMTOOLS_STATS|SAMTOOLS_FLAGSTAT|SAMTOOLS_IDXSTATS' {
