Update: conf/modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -78,7 +78,7 @@ process {
         ext.args    = '--keep-exon-attrs -F -T'
         publishDir  = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ?null : filename },
             enabled: params.save_reference
         ]
