Added: default genome as GRCh38

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ params {
     input                      = null // sample sheet
 
     // Genome and reference options
-    genome                     = null
+    genome                     = 'GRCh38'
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
     save_reference             = false
