Fix syntax error

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -374,7 +374,7 @@ process {
     }
 }
 
-if( (params.annotate_tools) && (params.annotate_tools.contains('snpeff') ) {
+if( (params.annotate_tools) && (params.annotate_tools.contains('snpeff')) ) {
     process {
         withName: 'NFCORE_RNAVAR:RNAVAR:ANNOTATE:SNPEFF_ANNOTATE:TABIX_BGZIPTABIX' {
             ext.prefix = {"${meta.id}_snpEff.ann.vcf"}
