--- a/nextflow.config
+++ b/nextflow.config
@@ -235,7 +235,7 @@ manifest {
     homePage        = 'https://github.com/nf-core/rnavar'
     description     = 'GATK4 RNA variant calling pipeline'
     mainScript      = 'main.nf'
-    nextflowVersion = '!>=21.10.3'
+    nextflowVersion = '>=21.10.3'
     version         = '1.0dev'
 }
 
