--- a/nextflow.config
+++ b/nextflow.config
@@ -236,7 +236,7 @@ manifest {
     description     = 'GATK4 RNA variant calling pipeline'
     mainScript      = 'main.nf'
     nextflowVersion = '>=21.10.3'
-    version         = '1.0dev'
+    version = '1.0.0'
 }
 
 // Load modules.config for DSL2 module specific options
