Update: mode of GUNZIP_* in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -51,7 +51,7 @@ process {
     withName: 'GUNZIP_.*' {
         publishDir = [
             path: { "${params.outdir}/genome" },
-            mode: 'copy',
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename },
             enabled: params.save_reference
         ]
