Relabelled STAR params to be more clean and clear

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -146,9 +146,9 @@ process {
             params.save_unaligned ? '--outReadsUnmapped Fastx' : '',
             params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : '',
             params.star_twopass ? '--twopassMode Basic' : '',
-            params.star_limitBAMsortRAM > 0 ? "--limitBAMsortRAM ${params.star_limitBAMsortRAM}" : "",
-            params.star_outBAMsortingBinsN > 0 ? "--outBAMsortingBinsN ${params.star_outBAMsortingBinsN}" : "",
-            params.star_limitOutSJcollapsed > 0 ? "--limitOutSJcollapsed ${params.star_limitOutSJcollapsed}" : ""
+            params.star_max_memory_bamsort > 0 ? "--limitBAMsortRAM ${params.star_max_memory_bamsort}" : "",
+            params.star_bins_bamsort > 0 ? "--outBAMsortingBinsN ${params.star_bins_bamsort}" : "",
+            params.star_max_collapsed_junc > 0 ? "--limitOutSJcollapsed ${params.star_max_collapsed_junc}" : ""
         ].join(' ').trim()
         publishDir = [
             [
