--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ params {
     // Pipeline options
 
     // Mandatory option
-    input                           = null // sample sheet
+    input                           = null      // sample sheet
 
     // Genome and reference options
     genome                          = 'GRCh38'
@@ -25,12 +25,12 @@ params {
     read_length                     = 150 // Required for STAR to build index and align reads
 
     // Alignment
-    aligner                         = 'star' // Only STAR is currently supported.
+    aligner                         = 'star'    // Only STAR is currently supported.
     star_twopass                    = true
-    star_ignore_sjdbgtf             = false // Ignore GTF file while creating index or alignment by STAR
-    star_limitBAMsortRAM            = 0
-    star_outBAMsortingBinsN         = 50
-    star_limitOutSJcollapsed        = 1000000
+    star_ignore_sjdbgtf             = false     // Ignore GTF file while creating index or alignment by STAR
+    star_max_memory_bamsort         = 0         // STAR parameter limitBAMsortRAM to specify maximum RAM for sorting BAM
+    star_bins_bamsort               = 50        // STAR parameter outBAMsortingBinsN to specify number of bins for sorting BAM
+    star_max_collapsed_junc         = 1000000   // STAR parameter limitOutSJcollapsed to specify max number of collapsed junctions
     seq_center                      = null
     seq_platform                    = 'illumina' // Required for preparing for BAM headers for GATK to work
     bam_csi_index                   = false
@@ -44,7 +44,7 @@ params {
     no_intervals                    = false
 
     // Variant annotation
-    annotate_tools                  = null // List of annotation tools to run - snpeff or vep or merge
+    annotate_tools                  = null  // List of annotation tools to run - snpeff or vep or merge
     annotation_cache                = false // Annotation cache disabled
     cadd_cache                      = null // CADD cache disabled
     cadd_indels                     = null // No CADD InDels file
