Add params to config and json files

--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,7 @@ params {
     igenomes_ignore                 = false
     save_reference                  = false
     save_merged_fastq               = false
+    feature_type                    = 'exon'
 
     // Sequence read information
     read_length                     = 150 // Required for STAR to build index and align reads
@@ -42,7 +43,7 @@ params {
 
     // Variant calling
     no_intervals                    = false
-
+    
     // Variant annotation
     annotate_tools                  = null  // List of annotation tools to run - snpeff or vep or merge
     annotation_cache                = false // Annotation cache disabled
@@ -67,8 +68,9 @@ params {
     // GATK intervallist parameters
     gatk_interval_scatter_count     = 25
 
-    //GATK haplotypecaller parameters
+    // GATK haplotypecaller parameters
     gatk_hc_call_conf               = 20
+    generate_gvcf                   = false
 
     //GATK variant filter parameters
     gatk_vf_window_size             = 35
