restore some functionnalities

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -61,6 +61,10 @@ process {
         ext.args2 = '--no-same-owner'
     }
 
+    withName: BEDTOOLS_SORT {
+        ext.prefix = { "${meta.id}.sorted" }
+    }
+
     withName: STAR_GENOMEGENERATE {
         ext.args   = params.read_length ? "--sjdbOverhang ${params.read_length - 1}" : ''
     }
@@ -380,7 +384,7 @@ process {
 
 process {
 
-    withName: 'ENSEMBLVEP' {
+    withName: 'ENSEMBLVEP_VEP' {
         ext.args    = '--everything --filter_common --per_gene --total_length --offline'
         if(!params.vep_cache){
             container   = { params.genome ? "nfcore/vep:104.3.${params.genome}" : "nfcore/vep:104.3.${params.vep_genome}" }
@@ -393,7 +397,7 @@ process {
         ]
     }
 
-    withName: 'SNPEFF' {
+    withName: 'SNPEFF_SNPEFF' {
         ext.args    = '-nodownload -canon -v'
         if(!params.snpeff_cache){
             container   = { params.genome ? "nfcore/snpeff:5.0.${params.genome}" : "nfcore/snpeff:5.0.${params.snpeff_db.split('\\.')[0]}" }
