--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -15,7 +15,7 @@ params {
     config_profile_description = 'Full test dataset to check pipeline function'
 
     // Parameters for full-size test
-    input          = 'https://raw.githubusercontent.com/nf-core/test-datasets/rnavar/samplesheet/v1.0/samplesheet_full.csv'
+    input          = "${projectDir}/tests/csv/1.1/samplesheet_full.csv"
     read_length    = 101
     genome         = 'GRCh38'
 }
