--- a/conf/modules.config
+++ b/conf/modules.config
@@ -313,7 +313,7 @@ if(!params.skip_baserecalibration) {
 
 process {
 
-    withName: GATK4_HAPLOTYPECALLER {
+    withName: GATK4_HAPLOTYPECALLERVCF {
         ext.args    = [
             '--dont-use-soft-clipped-bases',
             params.gatk_hc_call_conf ? "--standard-min-confidence-threshold-for-calling $params.gatk_hc_call_conf" : '',
