fix path to file

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,7 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input = "https://raw.githubusercontent.com/nf-core/test-datasets/rnavar/samplesheet/v1.0/samplesheet.csv"
+    input = "${projectDir}/tests/csv/1.0/fastq_single.csv"
 
     // Genome references
     genome              = 'WBcel235'
