--- a/conf/modules.config
+++ b/conf/modules.config
@@ -204,19 +204,19 @@ process {
         publishDir  = [ enabled: false ]
     }
 
-    withName: '.*:MARKDUPLICATES:GATK4_MARKDUPLICATES' {
+    withName: 'GATK4_MARKDUPLICATES' {
         ext.args   = [
             '--ASSUME_SORTED true',
             '--VALIDATION_STRINGENCY LENIENT',
             params.remove_duplicates ? '--REMOVE_DUPLICATES true' : ''
         ].join(' ').trim()
-        ext.prefix = {"${meta.id}.markdup.sorted"}
+        ext.prefix = {"${meta.id}.md.bam"}
         publishDir  = [
             [
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
                 mode: params.publish_dir_mode,
                 enabled: true,
-                pattern: "*.{bam}"
+                pattern: "*.{bam,bai}"
             ],
             [
                 path: { "${params.outdir}/reports/stats/${meta.id}" },
@@ -229,7 +229,7 @@ process {
 
     withName: '.*:MARKDUPLICATES:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
-        ext.prefix  = {"${meta.id}.markdup.sorted"}
+        ext.prefix  = {"${meta.id}.md"}
         publishDir  = [
             path: { "${params.outdir}/preprocessing/${meta.id}" },
             mode: params.publish_dir_mode,
