--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           - "latest-everything"
         test:
           - "default"
-          - "annotation"
+          # - "annotation"
           - "removeduplicates"
           - "skipbasecalib"
           - "bamcsiindex"
