--- a/conf/modules.config
+++ b/conf/modules.config
@@ -216,7 +216,7 @@ process {
                 path: { "${params.outdir}/preprocessing/${meta.id}" },
                 mode: params.publish_dir_mode,
                 enabled: true,
-                pattern: "*.{bam,bai}"
+                pattern: "*.{bam,bai,csi}"
             ],
             [
                 path: { "${params.outdir}/reports/stats/${meta.id}" },
@@ -227,7 +227,7 @@ process {
         ]
     }
 
-    withName: '.*:MARKDUPLICATES:SAMTOOLS_INDEX' {
+    withName: '.*:BAM_MARKDUPLICATES:SAMTOOLS_INDEX' {
         ext.args    = params.bam_csi_index ? '-c' : ''
         ext.prefix  = {"${meta.id}.md"}
         publishDir  = [
