--- a/conf/igenomes.config
+++ b/conf/igenomes.config
@@ -23,6 +23,11 @@ params {
             mito_name   = "MT"
             macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/GRCh37-blacklist.bed"
+            snpeff_db         = 87
+            snpeff_genome     = 'GRCh37'
+            vep_cache_version = 110
+            vep_genome        = 'GRCh37'
+            vep_species       = 'homo_sapiens'
         }
         'GRCh38' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/NCBI/GRCh38/Sequence/WholeGenomeFasta/genome.fa"
@@ -35,6 +40,11 @@ params {
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
+            snpeff_db         = 105
+            snpeff_genome     = 'GRCh38'
+            vep_cache_version = 110
+            vep_genome        = 'GRCh38'
+            vep_species       = 'homo_sapiens'
         }
         'CHM13' {
             fasta       = "${params.igenomes_base}/Homo_sapiens/UCSC/CHM13/Sequence/WholeGenomeFasta/genome.fa"
@@ -56,6 +66,11 @@ params {
             mito_name   = "MT"
             macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/GRCm38-blacklist.bed"
+            snpeff_db         = 99
+            snpeff_genome     = 'GRCm38'
+            vep_cache_version = 102
+            vep_genome        = 'GRCm38'
+            vep_species       = 'mus_musculus'
         }
         'TAIR10' {
             fasta       = "${params.igenomes_base}/Arabidopsis_thaliana/Ensembl/TAIR10/Sequence/WholeGenomeFasta/genome.fa"
@@ -88,6 +103,11 @@ params {
             bed12       = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Bos_taurus/Ensembl/UMD3.1/Annotation/README.txt"
             mito_name   = "MT"
+            snpeff_db         = 75
+            snpeff_genome     = 'UMD3.1'
+            vep_cache_version = 94
+            vep_genome        = 'UMD3.1'
+            vep_species       = 'bos_taurus'
         }
         'WBcel235' {
             fasta       = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Sequence/WholeGenomeFasta/genome.fa"
@@ -99,6 +119,11 @@ params {
             bed12       = "${params.igenomes_base}/Caenorhabditis_elegans/Ensembl/WBcel235/Annotation/Genes/genes.bed"
             mito_name   = "MtDNA"
             macs_gsize  = "9e7"
+            snpeff_db         = 105
+            snpeff_genome     = 'WBcel235'
+            vep_cache_version = 110
+            vep_genome        = 'WBcel235'
+            vep_species       = 'caenorhabditis_elegans'
         }
         'CanFam3.1' {
             fasta       = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Sequence/WholeGenomeFasta/genome.fa"
@@ -110,6 +135,11 @@ params {
             bed12       = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/Genes/genes.bed"
             readme      = "${params.igenomes_base}/Canis_familiaris/Ensembl/CanFam3.1/Annotation/README.txt"
             mito_name   = "MT"
+            snpeff_db         = 99
+            snpeff_genome     = 'CanFam3.1'
+            vep_cache_version = 104
+            vep_genome        = 'CanFam3.1'
+            vep_species       = 'canis_lupus_familiaris'
         }
         'GRCz10' {
             fasta       = "${params.igenomes_base}/Danio_rerio/Ensembl/GRCz10/Sequence/WholeGenomeFasta/genome.fa"
@@ -235,6 +265,11 @@ params {
             bed12       = "${params.igenomes_base}/Saccharomyces_cerevisiae/Ensembl/R64-1-1/Annotation/Genes/genes.bed"
             mito_name   = "MT"
             macs_gsize  = "1.2e7"
+            snpeff_db         = 105
+            snpeff_genome     = 'R64-1-1'
+            vep_cache_version = 110
+            vep_genome        = 'R64-1-1'
+            vep_species       = 'saccharomyces_cerevisiae'
         }
         'EF2' {
             fasta       = "${params.igenomes_base}/Schizosaccharomyces_pombe/Ensembl/EF2/Sequence/WholeGenomeFasta/genome.fa"
@@ -287,6 +322,11 @@ params {
             bismark     = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Sequence/BismarkIndex/"
             gtf         = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.gtf"
             bed12       = "${params.igenomes_base}/Homo_sapiens/UCSC/hg38/Annotation/Genes/genes.bed"
+            snpeff_db         = 105
+            snpeff_genome     = 'GRCh38'
+            vep_cache_version = 110
+            vep_genome        = 'GRCh38'
+            vep_species       = 'homo_sapiens'
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/hg38-blacklist.bed"
@@ -303,6 +343,11 @@ params {
             mito_name   = "chrM"
             macs_gsize  = "2.7e9"
             blacklist   = "${projectDir}/assets/blacklists/hg19-blacklist.bed"
+            snpeff_db         = 87
+            snpeff_genome     = 'GRCh37'
+            vep_cache_version = 110
+            vep_genome        = 'GRCh37'
+            vep_species       = 'homo_sapiens'
         }
         'mm10' {
             fasta       = "${params.igenomes_base}/Mus_musculus/UCSC/mm10/Sequence/WholeGenomeFasta/genome.fa"
@@ -316,6 +361,11 @@ params {
             mito_name   = "chrM"
             macs_gsize  = "1.87e9"
             blacklist   = "${projectDir}/assets/blacklists/mm10-blacklist.bed"
+            snpeff_db         = 99
+            snpeff_genome     = 'GRCm38'
+            vep_cache_version = 102
+            vep_genome        = 'GRCm38'
+            vep_species       = 'mus_musculus'
         }
         'bosTau8' {
             fasta       = "${params.igenomes_base}/Bos_taurus/UCSC/bosTau8/Sequence/WholeGenomeFasta/genome.fa"
