--- a/conf/test.config
+++ b/conf/test.config
@@ -38,7 +38,7 @@ params {
     star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
 
     // Annotation
-    snpeff_db           = 'WBcel235.99'
+    snpeff_db           = '99'
     vep_genome          = 'WBcel235'
     vep_species         = 'caenorhabditis_elegans'
     vep_cache_version   = '104'
