--- a/nextflow.config
+++ b/nextflow.config
@@ -304,6 +304,8 @@ manifest {
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
+includeConfig 'conf/modules/annotate.config'
+includeConfig 'conf/modules/prepare_cache.config'
 
 // Function to ensure that resource requirements don't go beyond
 // a maximum limit
